Fix: markdown-related errant whitespace [https://trello.com/c/u4TqiywR]

--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -36,3 +36,10 @@ li.govuk-service-navigation__margin-left-auto {
     white-space: nowrap;
   }
 }
+
+.govuk-hint {
+  // Remove the "newline" that appears if you use markdown in a form help block
+  p:first-child {
+    margin-top: 0;
+  }
+}
